--- a/maddenist stuffs/localisation/english/gup_general_l_english.yml
+++ b/maddenist stuffs/localisation/english/gup_general_l_english.yml
@@ -3587,14 +3587,17 @@
        ENG_economy_on_economy_desc:0 "Our proud dominions still struggle economically to this day. In order to support their economic recovery, we must provide aid to them as much as possible while allowing them to autonomously govern among themselves without our supervision for a while, and see what happens from here."
        ENG_spaghetti_pledge:0 "The Spaghetti Pledge"
        ENG_spaghetti_pledge_desc:0 "Anzio has always been our ally since the last tournament, and as such, we must strengthen our bonds with one another. This pledge will ensure Anzio remains not only neutral to Kuromorimine, but also to improve our relations. From one school to another."
+       spaghet_pledge_tt:0 "Prevent Anzio from joining Kuromorimine until 1940."
        ENG_chi_glo_navy:0 "The Chi-Ha-Tan-Gloriana Naval Treaty"
        ENG_chi_glo_navy_desc:0 "Chi-Ha-Tan's naval prowess grows stronger by the second, and we need to contain it. We will compose a treaty where in exchange for their reduced naval capacity, we shall grant them our territories to appease them. Hopefully this may prevent future conflicts in the east."
        ENG_appease_kmm:0 "Appease Kuromorimine"
        ENG_appease_kmm_desc:0 "We cannot risk another war that will tear the world apart, yet Kuromorimine is continuously expanding their borders in acts of aggression. Our best option for now is to ensure they are happy and grant what they desire."
+       appeasement_kuro_tt:0 "Prevents us from opposing Kuromorimine in their expansion."
        ENG_zhongguo_withdraw:0 "Negotiate a Withdrawal from Zhangguo"
        ENG_zhongguo_withdraw_desc:0 "The war in Zhangguo has taken a toll on both the school and Chi-Ha-Tan, yet the latter refuses to let-up on their aggression. Despite this, Chi-Ha-Tan may prove valuable to us, and our increased relations after the naval treaty may allow us to not only end the war in Zhangguo, but encourage them to join our alliance."
        ENG_grant_agree:0 "A Grant Agreement"
        ENG_grant_agree_desc:0 "St. Gloriana stands only with B.C Freedom. As an effort to expand our alliance, we will seek to invite other minor schools to strengthen our power and let all who dare bring disorder to fear us"
+       grant_appease_tt:0 "Allows minor schools to be added to our alliance"
        ENG_negotiate_kmm:0 "Bring Kuromorimine to the Table"
        ENG_negotiate_kmm_desc:0 "Kuromorimine's aggressive expansion has not gone unnoticed to the rest of the world, yet we do not have to turn this into something dire. We shall send a proposal to them where their present borders shall be acknowledged as part of their school, while ensuring not to expand elsewhere whatsoever."
        ENG_war_in_our_time:0 "War In Our Time"
