--- a/maddenist stuffs/localisation/english/GUP_superevents_l_english.yml
+++ b/maddenist stuffs/localisation/english/GUP_superevents_l_english.yml
@@ -1,8 +1,8 @@
 ﻿l_english:
 
 GUP_SuperEvents_Test_Title:0 "Test"
-GUP_SuperEvents_Test_Body:0 "Bill, you are very kind, but I dont want to sign up anyhwere \n\n-Mr.Glockner"
-GUP_SuperEvents_Test_Remark:0 "Mr.Gates"
+GUP_SuperEvents_Test_Body:0 "There's never enough drugs \n\n-Joe - Friend's classmate constantly on drugs"
+GUP_SuperEvents_Test_Remark:0 "You wanna share?"
 GUP_SuperEvents_63rd_Title:0 "The 63rd Senshadou Tournament"
 GUP_SuperEvents_63rd_Body:0 "Panzer Vor means Panzer Vor\n\n-Miho Nishizumi"
 GUP_SuperEvents_63rd_Remark:0 "It's time our tanks set into action again!"
