Leader traits, localization, fixed superevent for 63rd tournament.

--- a/maddenist stuffs/localisation/english/GUP_superevents_l_english.yml
+++ b/maddenist stuffs/localisation/english/GUP_superevents_l_english.yml
@@ -4,5 +4,5 @@ GUP_SuperEvents_Test_Title:0 "Test"
 GUP_SuperEvents_Test_Body:0 "There's never enough drugs \n\n-Joe - Friend's classmate constantly on drugs"
 GUP_SuperEvents_Test_Remark:0 "You wanna share?"
 GUP_SuperEvents_63rd_Title:0 "The 63rd Senshadou Tournament"
-GUP_SuperEvents_63rd_Body:0 "Panzer Vor means Panzer Vor\n\n-Miho Nishizumi"
+GUP_SuperEvents_63rd_Body:0 "I'll show them proof that the name 'Gale Earl Grey' is not just for show!\n-Earl Grey"
 GUP_SuperEvents_63rd_Remark:0 "It's time our tanks set into action again!"
