Vyjebával homlesákov, okusoval jich o vtákov

--- a/maddenist stuffs/localisation/english/gup_general_l_english.yml
+++ b/maddenist stuffs/localisation/english/gup_general_l_english.yml
@@ -40,6 +40,7 @@
  melancholic:0 "Melancholic [Mako Reizei]"
  itsthemorningfightnow:0 "Morning Fight [Mako Reizei]"
  golden_spatulas:0 "Golden Spatulas"
+ Crevojeb_Super_Event:0 "Pes Črevojeb"
  #Generic Flags
  has_died_flag: "has died"
 
