--- a/maddenist stuffs/localisation/english/GUP_superevents_l_english.yml
+++ b/maddenist stuffs/localisation/english/GUP_superevents_l_english.yml
@@ -6,3 +6,9 @@ GUP_SuperEvents_Test_Remark:0 "You wanna share?"
 GUP_SuperEvents_63rd_Title:0 "The 63rd Senshadou Tournament"
 GUP_SuperEvents_63rd_Body:0 "I'll show them proof that the name 'Gale Earl Grey' is not just for show!\n-Earl Grey"
 GUP_SuperEvents_63rd_Remark:0 "It's time our tanks set into action again!"
+GUP_SuperEvents_Darjeeling_Title:0 "Darjeeling chosen as commander"
+GUP_SuperEvents_Darjeeling_Body:0 "No matter how fast we go, or no matter how many hits we take, I will never spill my tea \n\n-Darjeeling"
+GUP_SuperEvents_Darjeeling_Remark:0 "Forward!"
+GUP_SuperEvents_Rosehip_Title:0 "Rosehip chosen as commander"
+GUP_SuperEvents_Rosehip_Body:0 "The Queen of Speed has arrived! \n\n-Rosehip"
+GUP_SuperEvents_Rosehip_Remark:0 "The Cavalry's here!"
