Pravda Civil Wat Super Events

--- a/maddenist stuffs/localisation/english/GUP_superevents_l_english.yml
+++ b/maddenist stuffs/localisation/english/GUP_superevents_l_english.yml
@@ -1,8 +1,8 @@
 ﻿l_english:
 
-GUP_SuperEvents_Test_Title:0 "Test"
+GUP_SuperEvents_Test_Title:0 "Joe"
 GUP_SuperEvents_Test_Body:0 "There's never enough drugs \n\n-Joe - Friend's classmate constantly on drugs"
-GUP_SuperEvents_Test_Remark:0 "You wanna share?"
+GUP_SuperEvents_Test_Remark:0 "Will you share?"
 GUP_SuperEvents_63rd_Title:0 "The 63rd Senshadou Tournament"
 GUP_SuperEvents_63rd_Body:0 "I'll show them proof that the name 'Gale Earl Grey' is not just for show!\n-Earl Grey"
 GUP_SuperEvents_63rd_Remark:0 "It's time our tanks set into action again!"
@@ -10,5 +10,14 @@ GUP_SuperEvents_Darjeeling_Title:0 "Darjeeling chosen as commander"
 GUP_SuperEvents_Darjeeling_Body:0 "No matter how fast we go, or no matter how many hits we take, I will never spill my tea \n\n-Darjeeling"
 GUP_SuperEvents_Darjeeling_Remark:0 "Forward!"
 GUP_SuperEvents_Rosehip_Title:0 "Rosehip chosen as commander"
-GUP_SuperEvents_Rosehip_Body:0 "The Queen of Speed has arrived! \n\n-Rosehip"
-GUP_SuperEvents_Rosehip_Remark:0 "The Cavalry's here!"
+GUP_SuperEvents_Pravda_Rosehip_Body:0 "The Queen of Speed has arrived! \n\n-Rosehip"
+GUP_SuperEvents_Pravda_Rosehip_Remark:0 "The Cavalry's here!"
+GUP_SuperEvents_Pravda_Fascist_CW_Title:0 "Pravda Civil War"
+GUP_SuperEvents_Pravda_Fascist_CW_Body:0 "Katyusha-sama, it was an honour to fight beside you.\n\n-Klara"
+GUP_SuperEvents_Pravda_Fascist_CW_Remark:0 "Za Pravdu!"
+GUP_SuperEvents_Pravda_Leftist_CW_Title:0 "Pravda Civil War"
+GUP_SuperEvents_Pravda_Leftist_CW_Body:0 "Our tank is big enough to become a shield, right? Wanna go?\n\n-Alina"
+GUP_SuperEvents_Pravda_Leftist_CW_Remark:0 "Za Pravdu!"
+GUP_SuperEvents_Pravda_Rightist_CW_Title:0 "Pravda Civil War"
+GUP_SuperEvents_Pravda_Rightist_CW_Body:0 "That midget... I can't trust a schemer like her, but I have to admit she's talented and popular.\n\n-Ekaterina"
+GUP_SuperEvents_Pravda_Rightist_CW_Remark:0 "Za Pravdu!"
