--- a/maddenist stuffs/localisation/english/wtt_events_l_english.yml
+++ b/maddenist stuffs/localisation/english/wtt_events_l_english.yml
@@ -92,7 +92,7 @@
  wtt_germany.12.d:0 "Our plan has been executed flawlessly, and Pepperoni has taken up the mantle of leadership of her academy. Her first act was to sign a treaty ensuring Anzioist entry into the Central Powers alliance. \n\nAnchovy's seemingly care free let-go of power was strange. But that doesn't matter now."
  wtt_germany.12.a:0 "The monarchies shall rise again!"
  wtt_germany.13.t:0 "Reunification of Oarai-Turul"
- wtt_germany.13.d:0 "With our support, [From.GetOldName] has taken the lead in the reunification of the Austro-Hungarian empire. Treaties between the involved parties were signed this morning, undoing two decades of separatist sentiment. The new unified government immediately pledged their military support to our cause, becoming a member of the Central Powers."
+ wtt_germany.13.d:0 "With our support, [From.GetOldName] has taken the lead in the reunification of the oarai-Turulian empire. Treaties between the involved parties were signed this morning, undoing two decades of separatist sentiment. The new unified government immediately pledged their military support to our cause, becoming a member of the Central Powers."
  wtt_germany.13.a:0 "Our old ally has returned to our side."
  wtt_germany.14.t:0 "Kuromorimine Offers Guarantee for Territory"
  wtt_germany.14.d:0 "[From.GetNameDefCap] has approached us with an offer that they say may benefit both parties. In light of the current political situation, and the threat on our Eastern border, Miho Nishizumi proposes to issue a guarantee that they will come to our military aid in the event that we come to war with Pravda. In return, they only ask for the return of their lost territories of Danzig and Poznan."
@@ -249,15 +249,15 @@
  wtt_germany.67.desc:0 "[From.GetNameDefCap] has rebuffed our demands for war participation, and continues to close their borders to our troops. If the Poles are not willing to grant us access for our forces, then we shall simply have to go over them."
  wtt_germany.67.a:0 "They brought it on themselves."
  wtt_germany.68.t:0 "[From.GetName] Proposes Imperial Reintegration"
- wtt_germany.68.desc:0 "The [From.GetAdjective] government has approached us with a proposal for reintegration of the old Austro-Hungarian Empire. Since pro-imperial sentiment is quite high in our respective nations, they claim that it would be in the best interests of everyone to unite our nations."
+ wtt_germany.68.desc:0 "The [From.GetAdjective] government has approached us with a proposal for reintegration of the old oarai-Turulian Empire. Since pro-imperial sentiment is quite high in our respective nations, they claim that it would be in the best interests of everyone to unite our nations."
  wtt_germany.68.a:0 "An excellent idea! We shall accept."
  wtt_germany.68.b:0 "Join them willingly? Never!"
  wtt_germany.69.t:0 "[From.GetName] Accepts Integration"
- wtt_germany.69.desc:0 "The [From.GetAdjective] government has responded to our proposal for reintegration of the old Austro-Hungarian Empire. They acknowledge the benefits of this move, and have stated their willingness to integrate their nation with ours, should all parties accept."
+ wtt_germany.69.desc:0 "The [From.GetAdjective] government has responded to our proposal for reintegration of the old oarai-Turulian Empire. They acknowledge the benefits of this move, and have stated their willingness to integrate their nation with ours, should all parties accept."
  wtt_germany.70.t:0 "[From.GetName] Rejects Integration"
- wtt_germany.70.desc:0 "The [From.GetAdjective] government has responded to our proposal for reintegration of the old Austro-Hungarian Empire. In no uncertain terms, they have indicated that they will never willingly accept our leadership in such a venture."
- wtt_germany.71.t:0 "The Re-formation of the Austro-Hungarian Empire"
- wtt_germany.71.desc:0 "Both our neighboring Austro-Hungarian successor states have accepted the proposed re-integration of their lands into our nation, and thereby re-forming into the Austro-Hungarian Empire. The signing of the treaty of re-unification has been greeted by extatic masses in the streets, and the [GER.GetAdjective] government has eagerly welcomed us back into their alliance."
+ wtt_germany.70.desc:0 "The [From.GetAdjective] government has responded to our proposal for reintegration of the old oarai-Turulian Empire. In no uncertain terms, they have indicated that they will never willingly accept our leadership in such a venture."
+ wtt_germany.71.t:0 "The Re-formation of the oarai-Turulian Empire"
+ wtt_germany.71.desc:0 "Both our neighboring oarai-Turulian successor states have accepted the proposed re-integration of their lands into our nation, and thereby re-forming into the oarai-Turulian Empire. The signing of the treaty of re-unification has been greeted by extatic masses in the streets, and the [GER.GetAdjective] government has eagerly welcomed us back into their alliance."
  wtt_germany.71.a:0 "A new era for Oarai-Turul dawns."
  wtt_germany.72.t:0 "[From.GetName] Proposes Economic Integration"
  wtt_germany.72.desc:0 "As we are already closely allied, [From.GetNameDef] has come with a proposal to aid us in the expansion of our military economy, by integrating our economies more fully. This would greatly aid our military growth, but it would also make us subordinate to them in matters of foreign policy."
@@ -319,7 +319,7 @@
  wtt_news.5.b:0 "Long live the Regina-Comandante!"
  wtt_news.5.c:0 "The Kuros must have had a hand in this..."
  wtt_news.6.t:0 "Oarai-Turul Reformed"
- wtt_news.6.desc:1 "The Danubian successor states to the Austro-Hungarian Empire have recently undergone a wave of pro-Imperial sentiment, and, under the leadership of [From.GetOldNameDef], have now elected to unify their respective countries once more into Oarai-Turul.\n\nThe new Austro-Hungarian government immediately took steps to sign a formal treaty of alliance with the Kuro Empire, openly giving their support to the Kuro anti-St Gloriana and anti-BC foreign policy."
+ wtt_news.6.desc:1 "The Danubian successor states to the oarai-Turulian Empire have recently undergone a wave of pro-Imperial sentiment, and, under the leadership of [From.GetOldNameDef], have now elected to unify their respective countries once more into Oarai-Turul.\n\nThe new oarai-Turulian government immediately took steps to sign a formal treaty of alliance with the Kuro Empire, openly giving their support to the Kuro anti-St Gloriana and anti-BC foreign policy."
  wtt_news.6.a:0 "And we didn't have to fire a shot."
  wtt_news.6.b:0 "Unified once more!"
  wtt_news.6.c:0 "A new power block in Europe? Concerning."
@@ -926,7 +926,7 @@
  wtt_news.55.a:1 "The dream of a unified Latin America awaits!"
  wtt_news.55.b:0 "The birth of a new American superpower?"
  wtt_news.56.t:0 "Rebirth of [From.GetNameDef]"
- wtt_news.56.desc:0 "Having secured all of the Austro-Hungarian Imperial lands, the [From.GetOldAdjective] government, as representatives of the last remaining successor state, has now begun with re-integrating these territories. Government-directed propaganda has flared up, extolling the "glorydays of the Empire" in a clear effort to rally the population behind the wide-spread national reforms and a return to imperial norms.\n\nAs a part of these, the [From.GetOldAdjective] government has announced the restoration of [From.GetNameDef], and has changed the nation's official name to reflect this."
+ wtt_news.56.desc:0 "Having secured all of the oarai-Turulian Imperial lands, the [From.GetOldAdjective] government, as representatives of the last remaining successor state, has now begun with re-integrating these territories. Government-directed propaganda has flared up, extolling the "glorydays of the Empire" in a clear effort to rally the population behind the wide-spread national reforms and a return to imperial norms.\n\nAs a part of these, the [From.GetOldAdjective] government has announced the restoration of [From.GetNameDef], and has changed the nation's official name to reflect this."
  wtt_news.56.a:0 "Indivisibiliter ac inseparabiliter!"
  wtt_news.56.b:0 "The Dual Monarchy rises again."
  wtt_news.57.t:1 "[From.GetNameDefCap]'s rebirth"
